app/assets/stylesheets/io_import.css.scss
/* ... */
.new-order-header {
  margin-top:30px;
  margin-left:40px;
  font-size: 12px;

  p {
    margin: 0 0 5px;
    font-size: 12px;
  }

  input {
    font-size: 12px;
  }

  p.heading {
    font-size:24px;
    color: $text_color;
    font-family: 'Armata', sans-serif;
  }

  p.adv-name {
    color:#999;
    font-weight:bold;
    font-family: 'Armata', sans-serif;
  }

  #revised_io_fileupload {
    cursor: pointer;
    background: url(asset-path('upload_io_icon.png')) 0px 0px no-repeat;
    padding-left:25px;
    width: 70px;
    height: 16px;
    float: right;
    position: relative;
    overflow: hidden;

    input {
      width: 100%;
      height: 100%;
      left: 0;
      top: 0;
      position: absolute;
      cursor: pointer;
      opacity: 0;
    }
  }

  .field.advertiser-name p {
    height: 40px;
  }

  .field.advertiser-name .tt-query {
    background: url(asset-path('magnifier_icon.png')) 2px 5px no-repeat;
    padding-left:20px;
  }

  .field.advertiser-name .tt-hint {
    padding-left:20px;
  }

  .field.media-contact-name {
    margin-top: 70px !important;
  }

  .field.billing-contact-name {
    margin-top: 70px !important;
  }

  .field {
    width:300px;
    float:left;
    margin:3px;

    > p {
      text-align:right;
      color: $text_color;
      width:40%;
      float:left;
      margin-right:10px;
      font-family: 'Armata', sans-serif;
    }

    > span {
      text-align: left;
      display: table-cell;
    }

    .editable-input input, .uneditable-input input {
      width: 105px !important;
    }

    .editable-input input.wide-editable-text {
      width: $wide-input-width !important;
    }

    .editable-input input.input-small, .uneditable-input input.input-small {
      width: 95px !important;
    }

    .advertiser-unknown {
      padding: 5px 2px 35px 2px;
      .tt-query {
        border: 1px solid $error_color;
      }
    }

    .advertiser-unknown:after {
      content: "Choose DFP advertiser name";
      float: left;
      position: relative;
      top: -5px;
      left: 7px;
      color: $error_color;
    }
  }

  .field.order-name .editable {
    display: table-cell;
  }

  .current-io-status-top {
    float:right;
    color: #D02898;
    font-size:20px;
    font-family: 'Armata', sans-serif;
    margin-right: 50px;
    padding-left: 25px;
  }

  .current-io-status-top {
    background: url(asset-path('draft_status_icon.png')) no-repeat;
    vertical-align: middle;
    line-height: 24px;
  }

  .current-io-status-top.pushed-status {
    background: url(asset-path('dfp_icon.png')) left bottom no-repeat;
  }

  .current-io-source-id {
    font-size: 15px;
    margin-top: 15px;
  }

  .general-info-container {
    border-top:1px solid $bg_color;
    border-bottom:1px solid $bg_color;
    float:none;
    margin-top:17px;
    clear:both;

    .columns {
      padding-top:10px;
      padding-bottom:5px;
    }

    .pure-u-1-3 {
      .field {
        width:100%;
        margin-top:0;
      }
    }

    .errors_container {
      width: 60%;
      margin-left: 40%;
      padding-left: 10px;
    }
  }

  .toggle-general-info-button {
    padding: 3px;
    clear: both;
    position: relative;
    margin: 0px auto;
    border: 0px;
    color: $text_color;
    background: $bg_color;
    width: 215px;
    padding: 5px;
    cursor: pointer;
  }

  .imported-file-name {
    width:630px;
    border:1px dashed $text_color;
    float:left;
    padding:3px;
    margin-right:50px;
    font-family: 'Armata', sans-serif;

    .name {
      float:left;
      padding-left:10px;
      color: $text_color;

      label{
        font-size:12px;
        display:inline-block;
        float:left;
        width: 95px;
      }

      span {
        text-decoration: underline;
        color: black;
        font-family: 'Arial', sans-serif;
        display:inline-block;
        width:250px;
        float:left;
        margin-left:10px;
        &.creative_name {
          margin-left: 105px;
        }
      }
    }

    .timestamp {
      color: $text_color;
      float:left;
      font-size:12px;
    }

    .creatives-txt-uploader {
      float: right;
      margin: 5px;
      min-width: 115px;
      text-align: right;
      position: relative;

      a {
        margin-right: 5px;
      }

      a.attachment-btn {
        margin-right: 25px;
      }
    }

    .attachment-btn:before {
      content: url(asset-path('attachment_icon.png'));
      width: 14px;
      height: 16px;
      margin-right: 5px;
    }

    .creatives-fileupload {
      position: absolute;
      top: 0;
      right: 0;
      margin: 0;
      padding: 0;
      font-size: 20px;
      cursor: pointer;
      opacity: 0;
      width: 115px;
      filter: alpha(opacity=0);
    }

    ::-webkit-file-upload-button {
      cursor:pointer ;
    }

    .upload-creatives-btn {
      float: left;
      overflow: hidden;
    }

  }

  .trafficker-container {
    float: right;
    width: 33%;
  }
}
/* ... */

